--- a/README.Rmd
+++ b/README.Rmd
@@ -43,7 +43,7 @@ Similarly, topmodel was recently removed from CRAN and can be installed like so:
 install.packages("https://cran.r-project.org/src/contrib/Archive/topmodel/topmodel_0.7.5.tar.gz", repos = NULL, type = "source")
 ```
 
-Now you can install openQUARREL. Choose "3: None" after the prompt to not update your packages after this command as this will also update airGR (on CRAN) and hydromad (on github).
+Now you can install openQUARREL. [!NOTE] Choose "3: None" after the prompt to not update your packages after this command as this will also update airGR (on CRAN) and hydromad (on github).
 
 ```{r install openQUARREL, eval=FALSE}
 remotes::install_github("mw-schirmer/openQUARREL", dependencies = TRUE)
