Added a list of all available models and snow modules, updated References with a link

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ A Meta-Package Integrating Several Hydrological Model Packages in R.
 
 An R meta-package of lumped conceptual models was developed based on the review of R-packages and the therein stated aim “[…] to run all the packages through the same R architecture” [(Astagneau et al., 2021)](https://doi.org/10.5194/hess-25-3937-2021). So far the models are restricted to daily input. It was called openQUARREL (QUantifying And Reducing uncertainties with an R package providing an Ensemble of hydrological modeLs) and combines hydrological model packages, applies several calibration routines and offers evaluation tool.
 
-It heavily relies on external packages as the [airGR](https://hydrogr.github.io/airGR/index.html), [hydromad](https://hydromad.github.io/index.html), [TUWmodel](https://rdrr.io/cran/TUWmodel/man/TUWmodel.html) and [topmodel](https://github.com/ICHydro/topmodel) with their hydrological models. Similarly, for calibration external packages are integrated as [DEoptim](https://cran.r-project.org/web/packages/DEoptim/index.html), [hydroPSO](https://github.com/hzambran/hydroPSO) and others. For objective functions it uses the [hydroGOF](https://cran.r-project.org/web/packages/hydroGOF/index.html) package, and applies the great plots of [airGR](https://hydrogr.github.io/airGR/index.html) to models of other packages.
+It heavily relies on external packages as the [airGR](https://hydrogr.github.io/airGR/index.html), [hydromad](https://hydromad.github.io/index.html), [TUWmodel](https://rdrr.io/cran/TUWmodel/man/TUWmodel.html)(HBV) and [topmodel](https://github.com/ICHydro/topmodel) with their hydrological models. Similarly, for calibration external packages are integrated as [DEoptim](https://cran.r-project.org/web/packages/DEoptim/index.html), [hydroPSO](https://github.com/hzambran/hydroPSO) and others. For objective functions it uses the [hydroGOF](https://cran.r-project.org/web/packages/hydroGOF/index.html) package, and applies the great plots of [airGR](https://hydrogr.github.io/airGR/index.html) to models of other packages.
 
 ![](man/figures/openQUARREL_overview.png)
 
