--- a/vignettes/include_snow_module.Rmd
+++ b/vignettes/include_snow_module.Rmd
@@ -128,5 +128,5 @@ lines(sim_update$date[3*365:length(sim$date)], sim_update$Qsim[3*365:length(sim$
 ```
 
 ## Next steps
-Now you do this again with a different hydrological model (todo: link to a list) ... or proceed with  `vignette("calibrate_validate")`. 
+Now you do this again with a different hydrological model or snow module (see table in `vignette("model_overview")`), or proceed with  `vignette("calibrate_validate")`. 
 
