some more work on the vignettes

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,11 +21,14 @@ knitr::opts_chunk$set(
 
 A Meta-Package Integrating Several Hydrological Model Packages in R.
 
-An R meta-package of lumped conceptual models was developed based on the review of R-packages and the therein stated aim “[…] to run all the packages through the same R architecture” [(Astagneau et al., 2021)](https://doi.org/10.5194/hess-25-3937-2021). So far the models are restricted to daily input. It was called openQUARREL (QUantifying And Reducing uncertainties with an R package providing an Ensemble of hydrological modeLs) and combines hydrological model packages, applies several calibration routines and offers evaluation tool.
+An R meta-package of lumped conceptual models was developed based on the review of R-packages and the therein stated aim “[…] to run all the packages through the same R architecture” [(Astagneau et al., 2021)](https://doi.org/10.5194/hess-25-3937-2021). So far the models are restricted to daily input. It was called openQUARREL (QUantifying And Reducing uncertainties with an R package providing an Ensemble of hydrological modeLs) and combines hydrological model packages, applies several calibration routines and offers evaluation tools.
 
-It heavily relies on external packages as the [airGR](https://hydrogr.github.io/airGR/index.html), [hydromad](https://hydromad.github.io/index.html), [TUWmodel](https://rdrr.io/cran/TUWmodel/man/TUWmodel.html) (HBV) and [topmodel](https://github.com/ICHydro/topmodel) with their hydrological models. Similarly, for calibration external packages are integrated as [DEoptim](https://cran.r-project.org/web/packages/DEoptim/index.html), [hydroPSO](https://github.com/hzambran/hydroPSO) and others. For objective functions it uses the [hydroGOF](https://cran.r-project.org/web/packages/hydroGOF/index.html) package, and applies the great plots of [airGR](https://hydrogr.github.io/airGR/index.html) to models of other packages.
+It heavily relies on external packages as [airGR](https://hydrogr.github.io/airGR/index.html), [hydromad](https://hydromad.github.io/index.html), [TUWmodel](https://rdrr.io/cran/TUWmodel/man/TUWmodel.html) (HBV) and [topmodel](https://github.com/ICHydro/topmodel) with their hydrological models. Similarly, for calibration external packages are integrated as [DEoptim](https://cran.r-project.org/web/packages/DEoptim/index.html), [hydroPSO](https://github.com/hzambran/hydroPSO) and others. For objective functions it uses the [hydroGOF](https://cran.r-project.org/web/packages/hydroGOF/index.html) package, and applies the great plots of [airGR](https://hydrogr.github.io/airGR/index.html) to models of other packages.
 
 ![](man/figures/openQUARREL_overview.png)
+
+The multimodel is operationally in use for monthly drought forecasting since September 2023. 
+Current results are available under https://www.drought.ch/de/prognosen/hydrologisches-multimodell/ (description in German only).
 
 ## Installation
 
@@ -41,7 +44,8 @@ Similarly, topmodel was recently removed from CRAN and can be installed like so:
 install.packages("https://cran.r-project.org/src/contrib/Archive/topmodel/topmodel_0.7.5.tar.gz", repos = NULL, type = "source")
 ```
 
-Now you can install openQUARREL. 
+Now you can install openQUARREL.
+
 **Note:** Choose "3: None" after the prompt to not update your packages after this command as this will also update airGR (on CRAN) and hydromad (on github).
 
 ```{r install openQUARREL, eval=FALSE}
@@ -51,6 +55,10 @@ remotes::install_github("mw-schirmer/openQUARREL", dependencies = TRUE)
 ## Example
 
 This is a basic example which shows you how to run some hydrological models `vignette("run_model_minimalistic")`.
+
+## Code availability
+
+The code is available to download under https://github.com/mw-schirmer/openQUARREL.
 
 ## Your contribution
 
